[gd_scene load_steps=42 format=3 uid="uid://dv0ex2f4tv2yk"]

[ext_resource type="Script" uid="uid://mftsxlvkva7e" path="res://scenes/Characters/enemys/sheep.gd" id="1_alvac"]
[ext_resource type="PackedScene" uid="uid://dayo12xu6qplh" path="res://scenes/misc/meat.tscn" id="2_6mwm0"]
[ext_resource type="Texture2D" uid="uid://dnw5afihj7cih" path="res://Assets/Factions/Knights/Pawn/Red/Pawn_Red.png" id="3_2boew"]
[ext_resource type="Texture2D" uid="uid://cccesn3b68ahc" path="res://Assets/Resources/Sheep/HappySheep_All.png" id="4_gl6la"]
[ext_resource type="Texture2D" uid="uid://bbfvdxa7w4wue" path="res://Assets/Resources/Sheep/HappySheep_Bouncing.png" id="5_b7pif"]
[ext_resource type="Script" uid="uid://6nenwuv6w1d2" path="res://scenes/Characters/enemys/behaviors/run_from_player.gd" id="6_o8lmq"]
[ext_resource type="AudioStream" uid="uid://gq8k3uoxpnh4" path="res://audios/sheepBaa.mp3" id="7_jni5s"]
[ext_resource type="AudioStream" uid="uid://dyv432cv2anjy" path="res://audios/hit.mp3" id="8_rg7x0"]
[ext_resource type="AudioStream" uid="uid://fci5vi6ikldr" path="res://audios/slay.mp3" id="9_k21gn"]
[ext_resource type="Texture2D" uid="uid://dhcgvdj8x0jt8" path="res://Assets/UI/Buttons/Button_Blue_3Slides.png" id="10_jni5s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yjq1f"]
atlas = ExtResource("4_gl6la")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4ap4"]
atlas = ExtResource("4_gl6la")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6tfv"]
atlas = ExtResource("4_gl6la")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0nmk"]
atlas = ExtResource("4_gl6la")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pkxa"]
atlas = ExtResource("4_gl6la")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlllm"]
atlas = ExtResource("4_gl6la")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uouq"]
atlas = ExtResource("4_gl6la")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmy15"]
atlas = ExtResource("4_gl6la")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ot8m"]
atlas = ExtResource("3_2boew")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_eehvx"]
atlas = ExtResource("3_2boew")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yya0x"]
atlas = ExtResource("3_2boew")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv8wg"]
atlas = ExtResource("3_2boew")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_frj58"]
atlas = ExtResource("3_2boew")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xjqb"]
atlas = ExtResource("3_2boew")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlis2"]
atlas = ExtResource("3_2boew")
region = Rect2(0, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_a022v"]
atlas = ExtResource("3_2boew")
region = Rect2(192, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe553"]
atlas = ExtResource("3_2boew")
region = Rect2(384, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2hdb"]
atlas = ExtResource("3_2boew")
region = Rect2(576, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpbok"]
atlas = ExtResource("3_2boew")
region = Rect2(768, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmpq4"]
atlas = ExtResource("3_2boew")
region = Rect2(960, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2btd"]
atlas = ExtResource("5_b7pif")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uclf2"]
atlas = ExtResource("5_b7pif")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikc8g"]
atlas = ExtResource("5_b7pif")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ns2n5"]
atlas = ExtResource("5_b7pif")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bstli"]
atlas = ExtResource("5_b7pif")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctgaq"]
atlas = ExtResource("5_b7pif")
region = Rect2(640, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_k84g0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjq1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4ap4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6tfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0nmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pkxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlllm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uouq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmy15")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ot8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eehvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yya0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv8wg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frj58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xjqb")
}],
"loop": false,
"name": &"sec_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlis2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a022v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe553")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2hdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpbok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmpq4")
}],
"loop": true,
"name": &"surrender",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2btd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uclf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikc8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ns2n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bstli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctgaq")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_35etj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2je81"]
radius = 7.2287

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rg7x0"]
texture = ExtResource("10_jni5s")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k21gn"]
bg_color = Color(0.233162, 0.702951, 0.411018, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing_size = 0.01

[node name="sheep" type="CharacterBody2D" groups=["sheeps"]]
scale = Vector2(1.5, 1.584)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_alvac")
health = 4
meat_prefab = ExtResource("2_6mwm0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.666667, -17.0455)
sprite_frames = SubResource("SpriteFrames_k84g0")
animation = &"idle"
autoplay = "idle"
frame = 4
frame_progress = 0.0588612

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.666667, -9.4697)
scale = Vector2(1.91209, 1.1579)
shape = SubResource("CircleShape2D_35etj")

[node name="run_from_player" type="Node2D" parent="."]
script = ExtResource("6_o8lmq")
speed = 2.0

[node name="DamageDigit2d" type="Marker2D" parent="."]
position = Vector2(0, -28.4091)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="seeing_area" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(33.308, 29.3373)
shape = SubResource("CircleShape2D_2je81")
debug_color = Color(0.948607, 0.195184, 0.305533, 0.42)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="baa_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_jni5s")

[node name="hit_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_rg7x0")

[node name="dying_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_k21gn")

[node name="Panel" type="Panel" parent="."]
offset_left = -31.333338
offset_right = 47.666664
offset_bottom = 14.0
scale = Vector2(0.8, 0.8)
theme_override_styles/panel = SubResource("StyleBoxTexture_rg7x0")

[node name="Life" type="ProgressBar" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.66666
offset_top = -5.4217167
offset_right = 50.70833
offset_bottom = 3.4561234
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
theme_override_styles/fill = SubResource("StyleBoxFlat_k21gn")
value = 100.0
rounded = true
show_percentage = false

[connection signal="body_exited" from="Area2D" to="run_from_player" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
